# uni-project-svm

./: Cargo.toml  README.md  SPECIFICATION.md
examples/: factorial.sasm  fibonacci.sasm  greeter.sasm  linear_search.sasm
src/: error.rs  instr.rs  lib.rs  mem.rs  vm.rs
tests/: fibonacci.rs  linear_search.rs
